fixed spacing on friends page

--- a/styles/stylesfriends.scss
+++ b/styles/stylesfriends.scss
@@ -112,7 +112,8 @@ body {
     font-size: 4vh;
     font-family: 'Pixellari';
     font-weight: bold;
-    padding-bottom: 1vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
     text-decoration: none;
     color: #ff80ff;
 }
@@ -129,7 +130,8 @@ body {
 .jonstudevText {
     font-size: 4vh;
     font-family: 'ShowcardGothic';
-    padding-bottom: 1vh;
+    padding-top: 0vh;
+    padding-bottom: 2vh;
     text-decoration: none;
     color: #9aa0a6;
 }
